# library2notion

./: .gitignore  LICENSE  README.md  config_template.json  pyproject.toml
library2notion/: Book.py  BookCollection.py  NotionIntegration.py  ProgressBar.py  __main__py  library2notion.py  pyshical_book_template.paper
library2notion/Models/: Book.py  BookCollection.py  BookEpub.py  BookPaper.py  BookPdf.py  NotionBookCollection.py
